# ai_sorter

./: README.md  pyproject.toml
ai_sorter/: __init__.py  app.py  database.py  file_utils.py  models.py  ollama.py  processor.py
tests/: test_database.py  test_file_utils.py  test_processor.py
