[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sorter"
version = "0.1.0"
description = "GTK/Ollama assistant for sorting download folders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyGObject>=3.46",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ai-sorter = "ai_sorter.app:main"

[tool.setuptools.packages.find]
include = ["ai_sorter*"]
